<resources>
    <string name="app_name">Cheffy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="get_started">Get Started</string>
    <string name="haven_t_account">Haven\'t Account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="register_now"><u>Register now</u></string>
    <string name="or_login_with">Or, login with</string>
    <string name="full_name">Full Name</string>
    <string name="or_register_with_email">Or, Register with email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="login_now"><u>Login now</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ingredient">Ingredient</string>
    <string name="instructions">Instructions</string>
    <string name="today_s_special"><u>Today\'s Special\!</u></string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="see_more"><u>see more</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="arise_your_inner_cheff">Arise Your Inner Cheff!</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="choose_the_right_meal_for_you">Choose the right meal for you</string>
    <string name="search">Search...</string>
    <string name="search_meal">Search meal</string>
    <string name="watch">Watch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search_for_meal">Search for meal</string>
    <!--        <string name="today_s_special">Today\'s Special</string>-->
</resources>